@@ -13,6 +13,9 @@ url = https://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console
 :version = 0.007
 installer = none
 
+[=inc::RequireExecutable]
+executable = php-cgi
+
 [NoAutomatedTesting]
 
 [Test::Kwalitee]
