@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - installer bails out if php-cgi is not installed
 
 0.004     2013-05-27 12:07:05 PDT-0700 (Karen Etheridge)
           - fix '/' URI redirection - direct mapping confuses CSS
